微小修改了0clean.bat

--- a/wcdma_m_emu/hxTestTool/WCDMA_MG7372_Emulator.csproj
+++ b/wcdma_m_emu/hxTestTool/WCDMA_MG7372_Emulator.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>hxTestTool</RootNamespace>
-    <AssemblyName>hxTestTool</AssemblyName>
+    <AssemblyName>WCDMA_MG7372_Emulator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
