--- a/jlink_udt_view/jlink_dcc/jlink_dcc.vcxproj
+++ b/jlink_udt_view/jlink_dcc/jlink_dcc.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="udt.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="jlink_dcc.cpp" />
